# AdsorptionInformationFormat-ParserNOMAD

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs-deploy.yml
docs/: index.md
docs/explanation/: explanation.md
docs/how_to/: contribute_to_the_documentation.md  contribute_to_this_plugin.md  install_this_plugin.md  use_this_plugin.md
docs/reference/: references.md
docs/tutorial/: tutorial.md  using_in_nomad_gui.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/aifparser/schema_packages/: aif_schema_package.py
tutorial/: tutorial.html  using_in_nomad_gui.html
