[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
name = "aifparser"
description = "Parser for the .aif file (Adsorption Information File) for NOMAD"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ron Dockhorn", email = "ron.dockhorn@tu-dresden.de" },
]
maintainers = [
    { name = "Ron Dockhorn", email = "ron.dockhorn@tu-dresden.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab>=1.4.2",
    "gemmi>=0.7.4",
    "nomad-schema-plugin-run==1.0.5",
    "nomad-normalizer-plugin-system==1.0.5",
    "nomad-schema-plugin-simulation-workflow==1.0.11",
    "nomad-simulation-apps==0.1.2",
    
    
]

[project.urls]
Repository = "https://github.com/Bondoki/aifparser"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "structlog",
    "mkdocs",
    "mkdocs-material==8.1.1",
    "pymdown-extensions",
    "mkdocs-click",
    "pytest-asyncio",
]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
    
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
    "F841", # Local variable is assigned to but never used
    "PLC0207", # String is split more times than necessary
    "PLC0415", # `import` should be at the top-level of a file
    "E501", # line too long
    "PLR0912", # Too many branches (# > 12)
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements (> 50)
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0415"] # import-outside-top-level

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nomad.plugin']
aif_parser_entry_point = "aifparser.parsers:aif_parser_entry_point"
aif_schema_package_entry_point = "aifparser.schema_packages:aif_schema_package_entry_point"
aif_app_entry_point = "aifparser.apps:aif_app_entry_point"




[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
skip = [".github/*"]
